--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -21,7 +21,7 @@ body {
     --file-header-border: 1px dashed var(--background-secondary);
 
     /* font */
-    --font-interface-theme: "Roboto";
+    --font-interface-theme: "Poppins";
     --font-text-theme: "Noto Serif";
 
     /* font weight */
