--- a/scss/editor/lists/_tree-view.scss
+++ b/scss/editor/lists/_tree-view.scss
@@ -1,17 +1,21 @@
 @use '../../animations/animations';
 
 ul:has(.tag[href='#tree-view']) {
+    --indentation-guide-reading-indent: -0.8em;
     --indentation-guide-width: 2px;
     --indentation-guide-color: var(--background-secondary);
     --list-bullet-size: 0.8em;
-    --list-indent: 4em;
+
+    position: relative;
+
+    .tag[href='#tree-view'] { display: none; }
 
     li::after {
         content: '';
         display: block;
         position: absolute;
         top: calc(-0.5em * var(--line-height-normal) - var(--indentation-guide-width) * 0.5);
-        left: calc(-1 * var(--list-indent) - 0.8em);
+        left: calc(-1 * var(--list-indent) + var(--indentation-guide-reading-indent));
         width: calc(var(--list-indent) + 2px);
         height: calc(1em * var(--line-height-normal));
         border: solid var(--indentation-guide-color);
@@ -20,7 +24,13 @@ ul:has(.tag[href='#tree-view']) {
         pointer-events: none;
     }
 
+    &::before,
     ul::before {
+        content: "\200B";
+        position: absolute;
+        display: block;
+        inset-inline-start: var(--indentation-guide-reading-indent);
+        border-inline-end: var(--indentation-guide-width) solid var(--indentation-guide-color);
         bottom: calc(0.5em * var(--line-height-normal) + 2px + var(--radius-m));
         top: calc(-0.5em * var(--line-height-normal) - var(--indentation-guide-width) * 0.5);
         z-index: 1;
@@ -34,7 +44,7 @@ ul:has(.tag[href='#tree-view']) {
         position: absolute;
         opacity: 1;
         top: calc(0.5em * var(--line-height-normal) - var(--list-bullet-size) * 0.5 + var(--list-spacing));
-        left: calc(-0.8em - var(--list-bullet-size) * 0.5 + var(--indentation-guide-width) * 0.5);
+        left: calc(var(--indentation-guide-reading-indent) - var(--list-bullet-size) * 0.5 + var(--indentation-guide-width) * 0.5);
         margin: 0;
         padding: 0;
         display: block;
