--- a/scss/foundations/colors/_colors_definitions.scss
+++ b/scss/foundations/colors/_colors_definitions.scss
@@ -1,22 +1,22 @@
 $themes: (
-    "light" "coffee"     #ece0d1 #38220f "lab",
-    "light" "sand"       #e6e4cc #2c2517 "srgb-linear",
-    "light" "automn"     #f1f1dc #4b220b "hsl",
-    "light" "ice"        #e1f0f3 #083a3f "srgb",
-    "light" "canyon"     #f8efda #884823 "srgb-linear",
-    "light" "silver"     #ffffff #000000 "srgb-linear",
-    "light" "candy"      #f7e5ef #6b3c63 "lab",
-    "light" "meadow"     #e9f5dd #192903 "srgb-linear",
-    "dark"  "coffee"     #201918 #d6cbc0 "lab",
-    "dark"  "forest"     #09180c #d6b498 "lab",
-    "dark"  "volcano"    #080300 #ee8e78 "lab",
-    "dark"  "artic"      #021e22 #caf0f7 "lab",
-    "dark"  "silver"     #1f1f1f #d9d9d9 "lab",
-    "dark"  "chocolate"  #231e1a #d7c0a3 "lab",
-    "dark"  "unwerwater" #0a0a29 #b3e5ff "lab",
-    "dark"  "mystic"     #0d0514 #f3d0ff "lab",
-    "dark"  "swamp"      #1b2329 #e2d0b6 "lab",
-    "dark"  "navy"       #000016 #fff5bb "oklab",
+    "light" "coffee-light" #ece0d1 #38220f "lab",
+    "light" "sand"         #e6e4cc #2c2517 "srgb-linear",
+    "light" "automn"       #f1f1dc #4b220b "hsl",
+    "light" "ice"          #e1f0f3 #083a3f "srgb",
+    "light" "canyon"       #f8efda #884823 "srgb-linear",
+    "light" "silver-light" #ebebeb #000000 "srgb-linear",
+    "light" "candy"        #f7e5ef #6b3c63 "lab",
+    "light" "meadow"       #e9f5dd #192903 "srgb-linear",
+    "dark"  "coffee-dark"  #201918 #d6cbc0 "lab",
+    "dark"  "forest"       #09180c #d6b498 "lab",
+    "dark"  "volcano"      #080300 #ee8e78 "lab",
+    "dark"  "artic"        #021e22 #caf0f7 "lab",
+    "dark"  "silver-dark"  #1f1f1f #d9d9d9 "lab",
+    "dark"  "chocolate"    #231e1a #d7c0a3 "lab",
+    "dark"  "unwerwater"   #0a0a29 #b3e5ff "lab",
+    "dark"  "mystic"       #0d0514 #f3d0ff "lab",
+    "dark"  "swamp"        #1b2329 #e2d0b6 "lab",
+    "dark"  "navy"         #000016 #fff5bb "oklab",
 );
 
 $extended-colors: (
