--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -180,7 +180,7 @@ settings:
         id: kpr-plain-tables
         title: Use plain table style
         type: class-toggle
-        default: true
+        default: false
 
 
 
