No styling of metadata oustide of the markdown view

--- a/scss/editor/_properties.scss
+++ b/scss/editor/_properties.scss
@@ -1,3 +1,5 @@
+
+
 @container metadata (width > 600px) {
     .metadata-content {
         column-count: 2;
@@ -5,20 +7,25 @@
     }
 }
 
-.metadata-container {
-    outline: 1px solid color-mix(in srgb, var(--metadata-border-color), transparent 50%);
-    outline-offset: -5px;
-}
+[data-type="markdown"] {
+    --metadata-border-width: 1px;
+    --metadata-padding: var(--size-4-6) var(--size-4-2) var(--size-4-2) var(--size-4-2);
 
-.metadata-properties-heading {
-    --heading-padding-inline: var(--size-4-6);
-    position: absolute;
-    top: 0;
-    transform: translateY(calc(-50% + 0.05em));
-    background: linear-gradient(to right,
-        transparent,
-        var(--background-primary) var(--heading-padding-inline),
-        var(--background-primary) calc(100% - var(--heading-padding-inline)),
-        transparent 100%);
-    padding-inline: var(--heading-padding-inline);
+    .metadata-container {
+        outline: 1px solid color-mix(in srgb, var(--metadata-border-color), transparent 50%);
+        outline-offset: -5px;
+    }
+    
+    .metadata-properties-heading {
+        --heading-padding-inline: var(--size-4-6);
+        position: absolute;
+        top: 0;
+        transform: translateY(calc(-50% + 0.05em));
+        background: linear-gradient(to right,
+            transparent,
+            var(--background-primary) var(--heading-padding-inline),
+            var(--background-primary) calc(100% - var(--heading-padding-inline)),
+            transparent 100%);
+        padding-inline: var(--heading-padding-inline);
+    }
 }
