New callout: email

--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -3,6 +3,7 @@
 @use 'callout-autopsy';
 @use 'callout-clue';
 @use 'callout-cutout';
+@use 'callout-email';
 @use 'callout-grid';
 @use 'callout-letter';
 @use 'callout-paper-fold';
