Rename 'grey' in 'gray'

--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -5,7 +5,7 @@ body {
     --button-radius: var(--radius-s);
 
     /* callouts */
-    --callout-quote: var(--color-grey-rgb);
+    --callout-quote: var(--color-gray-rgb);
     --callout-radius: 0;
     --callout-border-width: 1px;
     --callout-border-opacity: 0.25;
