--- a/scss/editor/callouts/_callout-colors.scss
+++ b/scss/editor/callouts/_callout-colors.scss
@@ -1,5 +1,5 @@
 
-.callout[data-callout-metadata~="grey"]   { --callout-default: var(--color-grey-rgb); }
+.callout[data-callout-metadata~="gray"]   { --callout-default: var(--color-gray-rgb); }
 .callout[data-callout-metadata~="brown"]  { --callout-default: var(--color-brown-rgb); }
 .callout[data-callout-metadata~="red"]    { --callout-default: var(--color-red-rgb); }
 .callout[data-callout-metadata~="orange"] { --callout-default: var(--color-orange-rgb); }
