--- a/scss/foundations/colors/_colors_definitions.scss
+++ b/scss/foundations/colors/_colors_definitions.scss
@@ -21,7 +21,7 @@ $themes: (
 
 $extended-colors: (
     "light": (
-        'grey':   #4d4d4d,
+        'gray':   #4d4d4d,
         'brown':  #632006,
         'red':    #b13030,
         'orange': #be6900,
@@ -33,7 +33,7 @@ $extended-colors: (
         'pink':   #e43eba
     ),
     "dark": (
-        'grey':   #bdbdbd,
+        'gray':   #bdbdbd,
         'brown':  #8d6540,
         'red':    #f06565,
         'orange': #eea444,
