Styling on inputs and popover

--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -42,6 +42,9 @@ body {
     /* inline title */
     --inline-title-color: var(--text-normal);
 
+    /* inputs */
+    --input-radius: var(--radius-s);
+
     /* modal */
     --modal-radius: var(--radius-s);
 
