--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -4,6 +4,7 @@
 
 
 @use 'cssclasses/cssclasses';
+@use 'components/components';
 @use 'editor/editor';
 @use 'plugins/plugins';
 @use 'window/window';
