--- a/scss/window/_tab-headers.scss
+++ b/scss/window/_tab-headers.scss
@@ -1,13 +1,3 @@
-/* Remove gap between header and content */
-.mod-sidedock .workspace-tab-header-container-inner {
-    padding-bottom: 0;
-}
-
-/* Ensure gap between header and top border windows */
-.mod-top .workspace-tab-header-container-inner {
-    margin-top: 6px;
-}
-
 /* default icon opacity */
 .workspace-tab-header-container {
     --icon-opacity: var(--icon-opacity-inactive);
@@ -19,9 +9,17 @@
     --icon-opacity: 1;
 }
 
-/* Dotted bottom border */
-.nav-header {
-    border-bottom: var(--file-header-border);
+
+/* ---------- SIDEDOCK ---------- */
+
+/* Remove gap between header and content */
+.mod-sidedock .workspace-tab-header-container-inner {
+    padding-bottom: 0;
+}
+
+/* Ensure gap between header and top border windows */
+.mod-sidedock.mod-top .workspace-tab-header-container-inner {
+    margin-top: 6px;
 }
 
 /* Ensure sufficient padding for cropped circle corners */
@@ -37,4 +35,72 @@
 .mod-sidedock .workspace-tab-header.is-active,
 .mod-sidedock .workspace-tab-header.is-active:hover {
     background-color: var(--background-primary);
+}
+
+/* ---------- FILE TABS ---------- */
+
+.mod-root .workspace-tab-header-container {
+    --tab-container-background: var(--background-primary);
+    margin-top: 6px;
+}
+
+.mod-root .workspace-tab-header-container-inner,
+.workspace .mod-root .workspace-tab-header {
+    padding-top: 0;
+}
+
+.mod-root .workspace-tab-header:not(.is-active) .workspace-tab-header-inner {
+    padding-top: 6px;
+}
+
+/* Style active tab */
+
+.mod-root .is-active {
+    background: none;
+    filter: drop-shadow(4px 2px 2px rgba(0, 0, 0, 0.3)) drop-shadow(-4px 2px 2px rgba(0, 0, 0, 0.3));
+}
+
+.mod-root .is-active .workspace-tab-header-inner {
+    background-color: var(--background-secondary);
+    clip-path: polygon(
+        0 0,
+        100% 0,
+        100% calc(100% - 8px),
+        calc(100% - 8px) 100%,
+        8px 100%,
+        0 calc(100% - 8px)
+    );
+}
+
+/* Remove cutout corner for first and last tabs */
+.mod-root .is-active:first-child .workspace-tab-header-inner {
+    clip-path: polygon(
+        0 0,
+        100% 0,
+        100% calc(100% - 8px),
+        calc(100% - 8px) 100%,
+        0 100%
+    );
+}
+.mod-root .is-active:last-child .workspace-tab-header-inner {
+    clip-path: polygon(
+        0 0,
+        100% 0,
+        100% 100%,
+        8px 100%,
+        0 calc(100% - 8px)
+    );
+}
+
+/* Remove separator before and after active file */
+.mod-root .workspace-tab-header:has(+ .is-active) .workspace-tab-header-inner::after,
+.mod-root .is-active + .workspace-tab-header .workspace-tab-header-inner::before {
+    content: none;
+}
+
+/* ---------- NAV HEADER ---------- */
+
+/* Dotted bottom border */
+.nav-header {
+    border-bottom: var(--file-header-border);
 }
