Squashed commit of the following:
commit 40551c4ef1161521e88cec6e4884b3c8f5785091
Author: etamisie <32704830+ElsaTam@users.noreply.github.com>
Date:   Thu Sep 12 11:02:11 2024 -0400

    Fix padding of Autopsy title

commit 63a69fa76aa17a62376b35d396c4275b6eb3c0e6
Author: etamisie <32704830+ElsaTam@users.noreply.github.com>
Date:   Thu Sep 12 10:58:03 2024 -0400

    Fix gap with top frame + Adapt style for each frame

commit e1e9ffe307e7b03eef0a55d17608760b5ea02320
Author: etamisie <32704830+ElsaTam@users.noreply.github.com>
Date:   Thu Sep 12 10:25:14 2024 -0400

    Remove list styling in some callouts

--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -9,12 +9,9 @@
 @use 'horizontal_rule';
 @use 'image';
 @use 'link';
-@use 'list';
-@use 'lists/family-tree';
-@use 'lists/tree-view';
+@use 'lists/lists';
 @use 'mark';
 @use 'properties';
 @use 'table';
-@use 'tasks';
 
 @use 'kpr-headings';
