--- a/scss/editor/callouts/_callout-timeline.scss
+++ b/scss/editor/callouts/_callout-timeline.scss
@@ -133,7 +133,7 @@
         top: 0; bottom: 0;
         left: 0; right: 0;
         background-color: var(--line-color);
-        -webkit-mask-image: var(--rope-segment-vertical),
+        mask-image: var(--rope-segment-vertical),
         linear-gradient(
             to bottom,
             transparent,
@@ -141,9 +141,9 @@
             black calc(100% - var(--line-fade-width)),
             transparent
         );
-        -webkit-mask-repeat:repeat-y, no-repeat;
-        -webkit-mask-position: center, center;
-        -webkit-mask-size: var(--line-thickness), 100%;
+        mask-repeat:repeat-y, no-repeat;
+        mask-position: center, center;
+        mask-size: var(--line-thickness), 100%;
         mask-composite: intersect;
     }
 
@@ -214,7 +214,7 @@
         grid-row: 2;
         grid-column: 1 / span 100;
         background-color: var(--line-color);
-        -webkit-mask-image: var(--rope-segment-horizontal),
+        mask-image: var(--rope-segment-horizontal),
         linear-gradient(
             to right,
             transparent,
@@ -222,9 +222,9 @@
             black calc(100% - var(--line-fade-width)),
             transparent
         );
-        -webkit-mask-repeat: repeat-x, no-repeat;
-        -webkit-mask-position: center center;
-        -webkit-mask-size: var(--line-thickness), 100%;
+        mask-repeat: repeat-x, no-repeat;
+        mask-position: center center;
+        mask-size: var(--line-thickness), 100%;
         mask-composite: intersect;
         z-index: 0;
     }
