--- a/scss/window/_sidebar.scss
+++ b/scss/window/_sidebar.scss
@@ -7,7 +7,7 @@
 .mod-sidedock .workspace-leaf {
     background-color: var(--background-primary);
     box-shadow: inset 0 0 20px 3px rgba(0, 0, 0, 0.5);
-    -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black)
+    mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black)
         calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius));
 }
 
@@ -22,7 +22,7 @@
     position: absolute;
     inset: var(--cutout-outline-inset);
     background: var(--background-secondary);
-    -webkit-mask: radial-gradient(
+    mask: radial-gradient(
         var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius),
         transparent calc(100% - 1px),
         black calc(100% - 1px) 100%,
