--- a/scss/cssclasses/_newspaper.scss
+++ b/scss/cssclasses/_newspaper.scss
@@ -10,7 +10,6 @@
 }
 
 .newspaper {
-    --metadata-display-reading: block;
     --inline-title-font: "Playfair Display";
     --inline-title-padding-top: var(--inline-title-margin-bottom);
     --bold-modifier: 500;
@@ -21,7 +20,19 @@
     --h1-style: italic;
     --h1-weight: var(--font-semibold);
     --h1-variant: small-caps;
+    --metadata-border-width: 0;
     container: newspaper-view / size;
+}
+
+.newspaper .metadata-container {
+    outline: none;
+}
+.newspaper .metadata-properties-heading {
+    --heading-padding-inline: var(--size-4-1);
+    position: relative;
+    top: unset;
+    transform: none;
+    background: none;
 }
 
 .newspaper .inline-title {
@@ -38,7 +49,7 @@
 }
 
 @container newspaper-view style(--metadata-display-reading: block) {
-    .markdown-preview-view .mod-header::after {
+    .show-properties.markdown-preview-view .mod-header::after {
         content: "";
         display: block;
         border-bottom: 2px solid var(--text-normal);
@@ -48,7 +59,7 @@
 }
 
 @container newspaper-view style(--metadata-display-editing: block) {
-    .markdown-source-view .cm-contentContainer::before {
+    .show-properties.markdown-source-view .cm-contentContainer::before {
         content: "";
         position: absolute;
         border-bottom: 2px solid var(--text-normal);
@@ -57,8 +68,8 @@
     }
 }
 
-.newspaper div:has(> .frontmatter)+div~div>h1,
-.newspaper .cm-content>.cm-line~.HyperMD-header-1 {
+.newspaper div:has(> .frontmatter) + div ~ div > h1,
+.newspaper .cm-content > .cm-line ~ .HyperMD-header-1 {
     border-top: 1px solid var(--text-normal);
 }
 
@@ -69,6 +80,7 @@
     margin-right: auto;
     padding-left: 50px;
     padding-right: 50px;
+    text-align: center;
 }
 
 .newspaper img {
