Squashed merge of branch colors:
commit a0bbd7db31eda9f52a1050f5daf3b72a01ca1000
Author: etamisie <32704830+ElsaTam@users.noreply.github.com>
Date:   Thu Sep 12 18:58:56 2024 -0400

    Add Atom color scheme (dark)

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -53,6 +53,9 @@ settings:
                 label: Artic
                 value: kpr-artic
             - 
+                label: Atom
+                value: kpr-atom
+            - 
                 label: Chocolate
                 value: kpr-chocolate
             - 
