--- a/scss/foundations/colors/_colors_definitions.scss
+++ b/scss/foundations/colors/_colors_definitions.scss
@@ -17,6 +17,7 @@ $themes: (
     "dark"  "mystic"       #0d0514 #f3d0ff "lab",
     "dark"  "swamp"        #1b2329 #e2d0b6 "lab",
     "dark"  "navy"         #000016 #fff5bb "oklab",
+    "dark"  "atom"         #272b34 #ffffff "lab",
 );
 
 $extended-colors: (
